--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gkelvin6.github.io/kg888",
+  "homepage": "https://gkelvin6.github.io/",
   "name": "kg888",
   "version": "0.1.0",
   "private": true,
